<resources>
    <string name="app_name">BulletinBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_post">Post</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">User Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_create_post">CreatePostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="prompt_post_title">Title</string>
    <string name="prompt_post_description">Description</string>
    <string name="prompt_post_date">Date</string>
    <string name="prompt_post_creator_name">Creator Name</string>
    <string name="prompt_post_location">Location</string>
    <string name="invalid_title">Title is null</string>
    <string name="invalid_creator_name">Creator name must be >2 characters</string>
    <string name="invalid_date">Not a valid date</string>
    <string name="invalid_location">Not a valid location</string>
    <string name="invalid_description">Description is null</string>

    <string name="get_posts_failed">"Get Post failed"</string>
    <string name="update_post_failed">"Update Post failed"</string>
    <string name="save_post_failed">"Save Post failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_post">Save</string>


</resources>