<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="editPost"
            type="com.example.bulletinboard.data.model.Post" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.PostFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_post_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<!--        -->


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{editPost.title ?? ""}'/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCreatorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldTitle"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_post_creator_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCreatorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{editPost.creatorName ?? ""}'/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldCreatorName"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_post_date"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldCreatorName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{editPost.date ?? ""}'/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFieldDate"

        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_post_location"
        android:inputType="text"
        app:endIconDrawable="@drawable/baseline_edit_location_alt_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{editPost.location ?? ""}'/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/prompt_post_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldLocation"
        app:layout_constraintBottom_toTopOf="@id/buttonSavePost">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text='@{editPost.description ?? ""}'
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSavePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/save_post" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>