<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.createPost.CreatePostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/Theme.BulletinBoard.PopupOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Create Post" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:padding="16dp"
        tools:context=".ui.createPost.CreatePostActivity">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/prompt_post_title"
            android:inputType="text"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCreatorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/prompt_post_creator_name"
            android:inputType="text"
            android:layout_below="@id/textFieldTitle"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCreatorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/prompt_post_date"
            android:inputType="text"
            android:layout_below="@id/textFieldCreatorName"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/prompt_post_location"
            android:inputType="text"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_edit_location_alt_24"
            android:layout_below="@id/textFieldDate"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/prompt_post_description"
            android:inputType="text"
            android:layout_below="@id/textFieldLocation"
            android:layout_above="@id/buttonCreatePost"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonCreatePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Post"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


